test/tests/stages/8_loops/valid/for.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(12345)
  ;
  int
  identifier(i)
  ;
  for
  (
  identifier(i)
  =
  const int(5)
  ;
  identifier(i)
  >=
  const int(0)
  ;
  identifier(i)
  =
  identifier(i)
  -
  const int(1)
  )
  identifier(a)
  =
  identifier(a)
  /
  const int(3)
  ;
  return
  identifier(a)
  ;
  }
