test/tests/stages/8_loops/invalid_parse/paren_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(2)
  ;
  )
  )
  int
  identifier(a)
  =
  const int(0)
  ;
  }
